# DND5eSpellBook

./: CMakeLists.txt  README.md  config.h.cmake  manifest.json.in  run.sh.cmake
cmake/: FindJsoncpp.cmake
debian/: .control.swp  changelog  control  files
po/: CMakeLists.txt  dnd5espellbook.brandontschaefer.pot
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/backend/modules/DND5eSpellBook/: BackendPlugin.cpp  BackendPlugin.h  Filter.cpp  Filter.h  JSonSpellParser.cpp  JSonSpellParser.h  Spell.cpp  Spell.h  SpellBookModel.cpp  SpellBookModel.h  backend.cpp  backend.h  main.cpp  mytype.cpp  qmldir
src/backend/modules/json/: spells.json
src/qml/: AscendingFilter.qml  CMakeLists.txt  ClassFilter.qml  DND5eSpellBook.desktop.in  FilterMenu.qml  Main.qml  SchoolFilter.qml  SortByFilter.qml  SpellLevelFilter.qml
